NOCC 1.8  ?? ??, ??

  Patches
    * Patch #2502771 : Use new MailReader class (Tim Gerundt).

  Misc
    * Add "Highest" and "Lowest" priority to sending (Tim Gerundt).
    * Show priority in mail view (Tim Gerundt).
    * Support priority column in inbox (Tim Gerundt).

NOCC 1.7  January 01, 2008

  Bugs
    * Bug #2184243 : inconcistent reporting of new mail (Michiel van Loon).
    * Bug #2140106 : Calling download.php without prior login results in
      download (Oliver Heil).
    * Bug #2013844 : Javascript warning validate(f) send.php (Arnaud Boudou).
    * Bug #2009567 : Cannot delete one mail (Arnaud Boudou).

  Patches
    * Patch #2093879 : New page navigation for inbox (Tim Gerundt).
    * Patch #2028613 : Style attachments table in send.php (Tim Gerundt).
    * Patch #2019643 : Spanish translation (Juan).
    * Patch #2019010 : Change "receipt" checkbox in send form (Tim Gerundt).
    * Patch #2011244 : Updated Czech translation (Ragimiri).
    * Patch #2010065 : Optimize regexs for remote image security (Tim Gerundt).

  RFE
    * RFE #2025620 : send_delay (Arnaud Boudou).
    * RFE #2025591 : login_prefix (Arnaud Boudou).

  Misc
    * Update FCKeditor to version 2.6.3 (Tim Gerundt).
    * Don't use JavaScript to open links in a new window (Tim Gerundt).
    * Switch back to XHTML 1.0 Transitional (Tim Gerundt).
    * Allow preferences page even without "prefs_dir" (Tim Gerundt).
    * Make displaying of image and text attachments more styleable (Tim Gerundt).
    * Refresh "blue" theme (Tim Gerundt).
    * Fix attachment list in verbose header view (Tim Gerundt).
    * Add favicon to contacts pages (Tim Gerundt).
    * Don't print the sub menus (Tim Gerundt).
    * Load "config/conf.php" via "common.php" file (Tim Gerundt).
    * Arrange preference entries (Tim Gerundt).
    * Add relationship attribute to the previous/next links (Tim Gerundt).
    * Fix some bugs on multiple mails actions (Arnaud Boudou).

NOCC 1.6  July 01, 2008

  Bugs