@@ -151,7 +151,7 @@ $html_reply = 'ءاجابة';
 $html_reply_short = 'رد';
 $html_reply_all = 'ءاجابة للكل';
 $html_forward = 'تحويل الرسالة ءالى';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'The forwarded message will be sent as an attachment to this one.'; //to translate
 $html_delete = 'ءازالة';
 $html_new = 'جديد';
