@@ -148,7 +148,7 @@ $html_reply = 'Contestar';
 $html_reply_short = 'Re'; //to translate
 $html_reply_all = 'Contestar tothom';
 $html_forward = 'Reenviar';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'El missatge reenviat s\'enviarà com a adjunt.';
 $html_delete = 'Esborrar';
 $html_new = 'Nou';
