@@ -149,7 +149,7 @@ $html_reply = 'Odpovědět';
 $html_reply_short = 'Re';
 $html_reply_all = 'Odpovědět všem';
 $html_forward = 'Předat dál';
-$html_forward_short = 'Fw';
+$html_forward_short = Fwd;
 $html_forward_info = 'Předaná zpráva bude odeslána jako příloha této zprávy.';
 $html_delete = 'Vymazat';
 $html_new = 'Nová';
