@@ -148,7 +148,7 @@ $html_reply = 'Ymateb';
 $html_reply_short = 'Re';
 $html_reply_all = 'Ymateb i bawb';
 $html_forward = 'Gyrru Ymlaen';
-$html_forward_short = 'Fw';
+$html_forward_short = Fwd;
 $html_forward_info = 'Bydd y neges rydych yn ei gyrru ymlaen yn cael ei gyrru fel atodiad i\'r neges yma..';
 $html_delete = 'Dileu';
 $html_new = 'Newydd';
