@@ -154,7 +154,7 @@ $html_reply = 'Antworten';
 $html_reply_short = 'Re';
 $html_reply_all = 'Antwort an alle';
 $html_forward = 'Weiterleitung';
-$html_forward_short = 'Fw';
+$html_forward_short = Fwd;
 $html_forward_info = 'Die weiterzuleitende Nachricht wird als Anhang mit dieser E-Mail verschickt.';
 $html_delete = 'Löschen';
 $html_new = 'Neu';
