@@ -148,7 +148,7 @@ $html_reply = 'Απάντηση';
 $html_reply_short = 'Re'; //to translate
 $html_reply_all = 'Απάντηση σε όλους';
 $html_forward = 'Προώθηση';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
 $html_delete = 'Διαγραφή';
 $html_new = 'Νέο';
