@@ -148,7 +148,7 @@ $html_reply = 'Reply';
 $html_reply_short = 'Re';
 $html_reply_all = 'Reply all';
 $html_forward = 'Forward';
-$html_forward_short = 'Fw';
+$html_forward_short = Fwd;
 $html_forward_info = 'The forwarded message will be sent as an attachment to this one.';
 $html_delete = 'Delete';
 $html_new = 'New';
