@@ -148,7 +148,7 @@ $html_reply = 'Responder';
 $html_reply_short = 'Re';
 $html_reply_all = 'Responder a todos';
 $html_forward = 'Reenviar';
-$html_forward_short = 'Fw';
+$html_forward_short = Fwd;
 $html_forward_info = 'Los mensajes reenviados se enviarán como archivos adjuntos al nuevo mensaje.';
 $html_delete = 'Eliminar';
 $html_new = 'Nuevo';
