@@ -145,7 +145,7 @@ $html_reply = 'پاسخ دادن';
 $html_reply_short = 'Re';  //to translate
 $html_reply_all = 'پاسخ دادن به همه';
 $html_forward = 'فرستادن';
-$html_forward_short = 'Fw';  //to translate
+$html_forward_short = Fwd;  //to translate
 $html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
 $html_delete = 'پاک کردن';
 $html_new = 'جديد';
