@@ -149,7 +149,7 @@ $html_reply = 'Rispondi';
 $html_reply_short = 'Re'; //to translate
 $html_reply_all = 'Rispondi a tutti';
 $html_forward = 'Inoltra';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'Il messaggio inoltrato sara` inviato come allegato a questo messaggio';
 $html_delete = 'Elimina';
 $html_new = 'Nuovo';
