@@ -149,7 +149,7 @@ $html_reply = '返信';
 $html_reply_short = 'Re'; //to translate
 $html_reply_all = '全員に返信';
 $html_forward = '転送';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = '転送されたメッセージはひとつの添付として送信されるでしょう。';
 $html_delete = '削除';
 $html_new = '新規';
