@@ -148,7 +148,7 @@ $html_reply = '답장';
 $html_reply_short = 'Re';  //to translate
 $html_reply_all = '전체답장';
 $html_forward = '전달';
-$html_forward_short = 'Fw';  //to translate
+$html_forward_short = Fwd;  //to translate
 $html_forward_info = 'The forwarded message will be sent as an attachment to this one.'; //to translate
 $html_delete = '삭제';
 $html_new = '안읽은편지';
