@@ -145,7 +145,7 @@ $html_reply = 'Atbildēt';
 $html_reply_short = 'Re'; //to translate
 $html_reply_all = 'Atbildēt visiem';
 $html_forward = 'Pārsūtīt';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
 $html_delete = 'Dzēst';
 $html_new = 'Jauns';
