@@ -148,7 +148,7 @@ $html_reply = 'Svar';
 $html_reply_short = 'Re';  //to translate
 $html_reply_all = 'Svar til alle';
 $html_forward = 'Videresend';
-$html_forward_short = 'Fw';  //to translate
+$html_forward_short = Fwd;  //to translate
 $html_forward_info = 'The forwarded message will be sent as an attachment to this one.'; //to translate
 $html_delete = 'Ta bort';
 $html_new = 'Ny';
