@@ -150,7 +150,7 @@ $html_reply = 'Responder';
 $html_reply_short = 'Re';
 $html_reply_all = 'Responder a todos';
 $html_forward = 'Reencaminhar';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'The forwarded message will be sent as an attachment to this one.'; //to translate
 $html_delete = 'Apagar';
 $html_new = 'Nova';
