@@ -149,7 +149,7 @@ $html_reply = 'Ответить';
 $html_reply_short = 'Re';  //to translate
 $html_reply_all = 'Ответить всем';
 $html_forward = 'Переслать';
-$html_forward_short = 'Fw';  //to translate
+$html_forward_short = Fwd;  //to translate
 $html_forward_info = 'The forwarded message will be sent as an attachment to this one.';  //to translate
 $html_delete = 'Удалить';
 $html_new = 'Новое';
