@@ -148,7 +148,7 @@ $html_reply = 'Odpovedať';
 $html_reply_short = 'Re'; //to translate
 $html_reply_all = 'Odpovedať všetkým';
 $html_forward = 'Preposlať';
-$html_forward_short = 'Fw'; //to translate
+$html_forward_short = Fwd; //to translate
 $html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
 $html_delete = 'Vymazať';
 $html_new = 'Nový';
