@@ -149,7 +149,7 @@ $html_reply = 'Odgovori';
 $html_reply_short = 'Re';  //to translate
 $html_reply_all = 'Odgovori svima';
 $html_forward = 'Proslijedi';
-$html_forward_short = 'Fw';  //to translate
+$html_forward_short = Fwd;  //to translate
 $html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
 $html_delete = 'Obriši';
 $html_new = 'Nova';
