@@ -147,7 +147,7 @@ $html_reply = 'R3ply';
 $html_reply_short = 'R3';
 $html_reply_all = 'R3ply 4ll';
 $html_forward = 'F0rw4rd';
-$html_forward_short = 'Fw';
+$html_forward_short = Fwd;
 $html_forward_info = 'Th3 f0rw4rd3d m3ss4g3 w!ll b3 s3nt 4s 4n 4tt4chm3nt t0 th!s 0n3.';
 $html_delete = 'D3l3t3';
 $html_new = 'N3w';
