@@ -148,7 +148,7 @@ $html_reply = '回复';
 $html_reply_short = 'Re：';
 $html_reply_all = '回复所有';
 $html_forward = '转发';
-$html_forward_short = 'Fw';  //to translate
+$html_forward_short = Fwd;  //to translate
 $html_forward_info = 'The forwarded message will be send as an attachment to this one.'; //to translate
 $html_delete = '删除';
 $html_new = '新';
